--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,14 +7,6 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
 }
-
-.monsieur-la-doulaise-regular {
-  font-family: "Monsieur La Doulaise", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-
 .red-hat-display{
   font-family: "Red Hat Display", serif;
   font-optical-sizing: auto;
@@ -127,19 +119,9 @@ the shape and movement of a lilypad, and sicne I could not use transform / trans
   text-align: right; 
   position: absolute;
   font-weight: bold;
-  font-family:  Red Hat Display;
+  font-family: "Red Hat Display", serif;
 }
 
-
-header {
-  /* display: flex;  */
-  justify-content: space-evenly;  
-  align-items: center;            
-  background-color: var(--color--green-2);
-  width: 100%;  
-  top: 0;
-  font-family: cinzel;
-}
 
 
 .nav-text {
@@ -240,7 +222,7 @@ h1 {
   font-size: var(--title-size);
   color: var(--color--quartery);
   text-align: center;
-  font-family: Monsieur La Doulaise;
+  font-family: "Cinzel", serif;
 }
 
 h2 {
@@ -249,7 +231,7 @@ h2 {
   font-size: var(--subheading-size);
   color: var(--color--quartery);
   text-align: center;
-  font-family: Red Hat Display;
+  font-family: "Red Hat Display", serif;
 
 }
 
@@ -258,13 +240,13 @@ h3 {
   font-size: var(--subheading-size2);
   color: var(--color--quartery);
   text-align: center;
-  font-family: Red Hat Display;
+  font-family: "Red Hat Display", serif;
 
 }
 
 p, a{
   color: var(--color--green-5);
-  font-family:Red Hat Display;
+  font-family: "Red Hat Display", serif;
   font-size: 1.0em;
 }
 
@@ -639,10 +621,7 @@ footer {
   color: var(--color--quartery);
 }
 
-nav {
-  display: flex;
-  flex-direction: column;
-}
+
 @media only screen and (min-width:800px) {
 
   /* @keyframes floatAnimation {
@@ -691,21 +670,24 @@ nav {
   }
 
   header {
+    width: 100%;
+    height: 3em;
+    background-color: var(--color--green-2);
     font-family: cinzel;
+    font-size: var(--nav-size);
+    color: var(--color--green-4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    position: sticky;
+    top: 0;
+    z-index: 10000; 
   }
 
-  nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;  
-    width: 100%;
-    height: var(--spacing); 
-    align-items: center;   
-    height: 3em;                            
-    font-size: var(--nav-size);      
-   color: var(--color--green-4);
-  }
-  
+/*  took out the about page and just made the header the link at the top  also made this sticky*/
+
   p.nav-text {
     font-family: cinzel;
   }
@@ -865,3 +847,19 @@ display: none;
 
     }
 
+/* recap of what i changed for the second submission:
+1. feedback:
+how i addressed it: I added  new animations to the lily pads to make them look like they are more realistic.
+i did this by using different animation-timing-functions for each lily pad, and making them all different. (line --) 
+i made different float animations, instead of having all of them be under the same float animation so i could apply different animation timings to the m(line)
+
+2. feedback:
+- I think you could start with the water lilies and then provide context, rathern than provide a landing moment.
+how i addressed it: deleted the about landing page, and made the lily pad page the index. then I fixed a new header to the top of the page
+that has a link to the arena page, and i made it sticky so that it is always at the top of the page. (line --)
+
+
+feedback:
+- Typesetting could go for another pass, I think some of the ratios/spacing are a little tight and reducing the number of fonts.
+how i addressed it: I only kept 2 fonts ()changed the font sizes of the titles and subheadings to be larger, and made the spacing between them larger as well. (line --)
+*/
