--- a/assets/styles.css
+++ b/assets/styles.css
@@ -866,9 +866,6 @@ how i addressed it: I only kept 2 fonts ()changed the font sizes of the titles a
 
 feedback:
 -The Lilies background here is competing with the blocks—maybe just the color palette as the visual connection/through-line? 
-how i addressed it: I changed the background color to be a solid color, so every background is a solid color (line )
+how i addressed it: I changed the background color to be a solid color, so every background is a solid color and deleting the background image in middle section (170-176)
 
-feedback:
-I want to see the entire artwork along with the tombstone information.
-how i addressed it: I added the image to the tombstone in the dialog modal so now you see the image and description (line --)
 */
